@@ -1036,22 +1036,23 @@
 					<aspectratio>scale</aspectratio>
 					<fadetime>IconCrossfadeTime</fadetime>
 					<texture background="true" fallback="Fanart_Fallback_Small.jpg">$INFO[ListItem.Art(fanart)]</texture>
-					<visible>Container.Content(Movies)</visible>
 					<bordertexture background="true" border="8">ThumbShadow.png</bordertexture>
 					<bordersize>8</bordersize>
 				</control>
-				<control type="image">
+				<control type="multiimage">
 					<posx>0</posx>
 					<posy>0</posy>
 					<width>510</width>
-					<height>325</height>
+					<height>286</height>
 					<aspectratio>scale</aspectratio>
 					<fadetime>IconCrossfadeTime</fadetime>
-					<texture background="true" fallback="Fanart_Fallback_Small.jpg">$INFO[ListItem.Art(fanart)]</texture>
-					<visible>Container.Content(TVShows)</visible>
+					<imagepath background="true">$INFO[ListItem.Path,,extrafanart/]</imagepath>
+					<timeperimage>5000</timeperimage>
+					<randomize>true</randomize>
 					<bordertexture background="true" border="8">ThumbShadow.png</bordertexture>
 					<bordersize>8</bordersize>
-				</control>
+					<visible>!Skin.HasSetting(View504XtraFanArt) + !StringCompare(ListItem.Label,..)</visible>
+				</control>		
 				<control type="grouplist">
 					<description>Media Codec Flagging Images</description>
 					<posx>0</posx>
