@@ -7,6 +7,7 @@
 - Added Home Support for Music Videos
 - Added Wider Home Menu Labels
 - Added Logos to MediaInfoView3
+- Added ExtraFanArt to MediaInfoView
 
 [B]1.0.2[/B]
 - Added Live CD Case as default Music Viz Background
